generator client {
  provider        = "prisma-client-js"
  previewFeatures = ["fullTextSearch", "fullTextIndex"]
}

datasource db {
  provider     = "mysql"
  url          = env("DATABASE_URL")
  relationMode = "prisma"
}

model Courses {
  CatalogYear String     @db.VarChar(16)
  Code        String     @db.VarChar(10)
  Prefix      String     @db.VarChar(6)
  Number      Int
  MinUnits    Int?
  MaxUnits    Int?
  Name        String     @db.VarChar(128)
  Description String?    @db.Text
  Prereqs     Json?
  Sections    Sections[]

  @@id([CatalogYear, Code])
  @@fulltext([Code, Name], map: "CourseSearchIndex")
}

model Enrolled {
  User      String        @db.VarChar(35)
  SectionId Int
  Section   Sections      @relation(fields: [SectionId], references: [SectionId], onDelete: Cascade)
  Seat      Int?
  Type      Enrolled_Type

  @@id([User, SectionId])
  @@index([SectionId])
}

model Term {
  TermId Int    @id @default(autoincrement())
  Year   Int
  Season String @db.VarChar(6)
  Sections Sections[]

  @@unique([Year, Season])
}

model Sections {
  SectionId        Int                @id @default(autoincrement())
  TermId            Int            
  Course           String             @db.VarChar(10)
  Start            DateTime           @db.Time(0)
  End              DateTime           @db.Time(0)
  Sunday           Boolean?           @db.Bit(1)
  Monday           Boolean?           @db.Bit(1)
  Tuesday          Boolean?           @db.Bit(1)
  Wednesday        Boolean?           @db.Bit(1)
  Thursday         Boolean?           @db.Bit(1)
  Friday           Boolean?           @db.Bit(1)
  Saturday         Boolean?           @db.Bit(1)
  Capacity         Int?
  WaitlistCapacity Int?
  Professor        String             @db.VarChar(255)
  Room             String?            @db.VarChar(10)
  Format           Sections_Format?
  Modality         Sections_Modality?
  CatalogYear      String             @db.VarChar(16)
  Term             Term?              @relation(fields: [TermId], references: [TermId])
  Courses          Courses            @relation(fields: [CatalogYear, Course], references: [CatalogYear, Code])
  Enrolleds        Enrolled[]

  @@unique([Course, Start, Professor])
  @@index([Course], map: "Course")
  @@index([CatalogYear, Course])
  @@index([TermId])
}

model Flowcharts {
  FlowchartId            String                   @id @db.VarChar(255)
  CatalogYear            String                   @db.VarChar(10)
  MajorId                String                   @db.VarChar(24)
  ConcentrationId        String                   @db.VarChar(24)
  Catalog                Catalogs                 @relation(fields: [CatalogYear], references: [CatalogYear])
  Major                  Majors                   @relation(fields: [MajorId], references: [Id])
  Concentration          Concentrations           @relation(fields: [ConcentrationId, MajorId], references: [Id, MajorId])
  GraduationRequirements GraduationRequirements[]

  @@index([CatalogYear])
  @@index([MajorId])
  @@index([ConcentrationId, MajorId])
}

model Catalogs {
  CatalogYear String       @id @db.VarChar(10)
  Flowcharts  Flowcharts[]
}

model Concentrations {
  Id         String       @db.VarChar(10)
  Name       String?      @db.VarChar(255)
  MajorId    String       @db.VarChar(255)
  Major      Majors       @relation(fields: [MajorId], references: [Id])
  Flowcharts Flowcharts[]

  @@id([Id, MajorId])
  @@index([MajorId])
}

model GraduationRequirements {
  FlowchartId String     @db.VarChar(255)
  Code        String     @db.VarChar(10)
  Flowchart   Flowcharts @relation(fields: [FlowchartId], references: [FlowchartId])

  @@id([FlowchartId, Code])
  @@index([FlowchartId])
}

model Majors {
  Id             String           @id @db.VarChar(24)
  Name           String           @db.VarChar(255)
  Flowcharts     Flowcharts[]
  Concentrations Concentrations[]
}

model CourseCodeMapping {
  OldCode String  @id @db.VarChar(20)
  NewCode String? @db.VarChar(20)
}

enum Sections_Format {
  Lecture
  Seminar
  Lab
}

enum Sections_Modality {
  Online
  InPerson
  TBD
}

enum Enrolled_Type {
  Enrolled
  Waitlist
  ShoppingCart
}
