@startuml uml
skinparam linetype ortho
skinparam Dpi 192

skinparam class {
  BackgroundColor<<External>> PowderBlue
  BorderColor<<External>> CornflowerBlue
  BackgroundColor<<JSON>> Khaki
  BorderColor<<JSON>> DarkGoldenRod
}

left to right direction

enum Sections_Format {
  Lecture
  Seminar
  Lab
}

enum Sections_Modality {
  Online
  InPerson
  TBD
}

enum Enrolled_Type {
  Enrolled
  Waitlist
  ShoppingCart
}

entity Courses {
  * CatalogYear: String
  * Code: String
  * Prefix: String
  * Number: Int
  MinUnits: Int?
  MaxUnits: Int?
  * Name: String
  Description: String?
  Prereqs: Json?
  * Sections: Sections[]
}

' Unifed here but not in schema yet
entity Enrolled {
  * User: String
  * SectionId: Int
  * Section: Sections
  * Seat: Int?
  * Type: Enrolled_Type
}

entity Terms {
  * Year: Int
  * Season: Season_Type
}

enum Season_Type {
  Fall
  Winter
  Spring
  Summer
}

entity Sections {
  * SectionId: Int
  * Term: Terms
  * Course: String
  * Start: Time
  * End: Time
  Sunday: Boolean?
  Monday: Boolean?
  Tuesday: Boolean?
  Wednesday: Boolean?
  Thursday: Boolean?
  Friday: Boolean?
  Saturday: Boolean?
  Capacity: Int?
  WaitlistCapacity: Int?
  * Professor: String
  Room: String?
  Format: Sections_Format?
  Modality: Sections_Modality?
  * Courses: Courses
  * Enrolleds: Enrolled[]
}

entity Flowcharts {
  * FlowchartId: String
  * CatalogYear: String
  * MajorId: String
  * ConcentrationId: String
  * Catalog: Catalogs
  * Major: Majors
  * Concentration: Concentrations
  * GraduationRequirements: GraduationRequirements[]
}

entity Catalogs {
  * CatalogYear: String
  * Flowcharts: Flowcharts[]
}

entity Concentrations {
  * Id: String
  Name: String?
  * MajorId: String
  * Major: Majors
  * Flowcharts: Flowcharts[]
}

entity GraduationRequirements {
  * FlowchartId: String
  * Code: String
  * Flowchart: Flowcharts
}

entity Majors {
  * Id: String
  * Name: String
  * Flowcharts: Flowcharts[]
}

entity User <<External>> {
  * Id: String
  * Email: String
  FlowchartId: String?
  OnboardingComplete: Boolean?
  Role: Role_Type?
}

enum Role_Type <<External>> {
  User
  Admin
}

class Prereqs <<JSON>> {
  * Type: Prereq_Type
  Children: Prereqs?
  Code: String?
}

enum Prereq_Type <<JSON>> {
  And
  Or
  Prerequisite
}


Courses "1" *-- "0..*" Sections
Terms "1" *-- "0..*" Sections
Sections "1" *-- "0..*" Enrolled
Flowcharts "0..*" o-- "1" Catalogs
Flowcharts "0..*" o-- "1" Concentrations
Flowcharts "0..*" o-- "1" Majors
Flowcharts "1" *-- "0..*" GraduationRequirements
GraduationRequirements "0..*"  --* "1" Courses
User "1" *-- "0..*" Enrolled
Enrolled -[hidden]- Enrolled_Type
Sections -[hidden]- Sections_Format
Sections -[hidden]- Sections_Modality
User -[hidden]- Role_Type
Prereqs -[hidden]- Prereq_Type
Courses -[hidden]- Prereqs
Terms -up[hidden]- Season_Type

@enduml
